# CEN4090L-PROJECT-G26

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
Gmail-MCP/: auth.py  calendarapi.py  gmailapi.py  main.py  pyproject.toml
News-MCP/: pyproject.toml
News-MCP-User/: pyproject.toml
News-MCP-User/news_user/: main.py
News-MCP/news_mcp/: main.py
Stock-MCP/: pyproject.toml  stockinfo.py
Weather-Info/: main.py  pyproject.toml
filesystem-MCP/: README.md  main.py  pyproject.toml
tools/: GetWeather.py
