[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cen4090l_project_g26"
version = "0.1.0"
description = "CEN4090L project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.12.4",
    "python-dotenv>=1.1.1",
]
